--- a/.storybook/manager-head.html
+++ b/.storybook/manager-head.html
@@ -21,6 +21,62 @@ Custom dark mode related vueless loader.
     width="250" />
 </div>
 
+<style>
+/* -------------------- Prevent showing users default storybook theme styles -------------------- */
+
+html.dark {
+  background: #111827;
+}
+
+#root {
+  visibility: hidden;
+}
+
+#sb-vueless-loader {
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  background: inherit;
+  width: 100%;
+  height: 100%;
+  z-index: 999;
+}
+
+.light #sb-vueless-loader {
+  background: #f1f5f9;
+}
+
+.dark #sb-vueless-loader {
+  background: #111827;
+}
+
+.sb-vueless-loader-img-dark,
+.sb-vueless-loader-img-light {
+  display: none;
+  animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+}
+
+.light .sb-vueless-loader-img-light {
+  display: block;
+}
+
+.dark .sb-vueless-loader-img-dark {
+  display: block;
+}
+
+@keyframes pulse {
+  0%, 100% {
+    opacity: 1;
+  }
+  50% {
+    opacity: .5;
+  }
+}
+</style>
+
 <script>
   /* This trick prevents showing users the default storybook theme. */
   (() => {
