--- a/.storybook/manager-head.html
+++ b/.storybook/manager-head.html
@@ -87,3 +87,13 @@ Custom dark mode related vueless loader.
     };
   })();
 </script>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TSYW2RPPXC"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-TSYW2RPPXC');
+</script>
