--- a/.storybook/manager-head.html
+++ b/.storybook/manager-head.html
@@ -2,21 +2,20 @@
 Overrides content of storybook layout HTML page.
 -->
 <link rel="shortcut icon" href="./favicons/favicon.ico">
-<link rel="icon" type="image/svg+xml" href="./favicons/favicon.svg" />
 
 <!--
-Custom dark mode related vueless loader.
+Custom color mode vueless loader.
 -->
 <div id="sb-vueless-loader">
   <img
     class="sb-vueless-loader-img-dark"
-    src="./images/vueless-logo-dark.svg"
+    src="./images/logo-dark.svg"
     alt="Vueless UI"
     width="250" />
 
   <img
     class="sb-vueless-loader-img-light"
-    src="./images/vueless-logo-light.svg"
+    src="./images/logo-light.svg"
     alt="Vueless UI"
     width="250" />
 </div>
@@ -75,18 +74,6 @@ Custom dark mode related vueless loader.
     }
   }
 </style>
-
-<script>
-  /* This trick prevents showing users the default storybook theme. */
-  (() => {
-    window.onload = function() {
-      setTimeout(() => {
-        document.getElementById("root").style.visibility = 'visible';
-        document.getElementById("sb-vueless-loader").style.display = 'none';
-      }, 1500);
-    };
-  })();
-</script>
 
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-TSYW2RPPXC"></script>
