chore: move `font-family` styling from CSS to inline `<style>` in Storybook configuration

--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -9,3 +9,9 @@ affecting rendered component(s) below Canvas and Docs tabs.
 <link rel="preconnect" crossorigin="anonymous" href="https://fonts.googleapis.com">
 <link rel="preconnect" crossorigin="anonymous" href="https://fonts.gstatic.com">
 <link rel="stylesheet" crossorigin="anonymous" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap">
+
+<style>
+  body {
+    font-family: Roboto, sans-serif;
+  }
+</style>
