fix: move `window.onload` to manager-head.html

--- a/.storybook/manager-head.html
+++ b/.storybook/manager-head.html
@@ -84,3 +84,16 @@ Custom color mode vueless loader.
 
   gtag('config', 'G-TSYW2RPPXC');
 </script>
+
+<script>
+  /* This trick prevents showing users the default storybook theme. */
+  window.onload = () => {
+    setTimeout(() => {
+      const rootElement = document.getElementById("root");
+      const vuelessLoader = document.getElementById("sb-vueless-loader");
+
+      if (rootElement) rootElement.style.visibility = "visible";
+      if (vuelessLoader) vuelessLoader.style.display = "none";
+    }, 1500);
+  };
+</script>
